--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "dependencies": {
+    "compression": "^1.7.3",
+    "helmet": "^3.15.0",
     "prop-types": "^15.6.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-router-dom": "^4.3.1"
   },
   "devDependencies": {
-    "react-scripts": "1.1.4"
+    "react-scripts": "^2.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
